--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="container signin">
             <p>Already have an account? <a href="#">Sign in</a>.</p>
         </div>
+        <p>BE KIND</p>
     </form>
 
 
