--- a/index.html
+++ b/index.html
@@ -6,318 +6,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sufi Academy</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </head>
-
-
 
 <body>
-
-
-    <div class="header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <a class="navbar-brand" href="index.html"> <img src="img/logo.png" width="200px" alt=""> </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#service">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-    <!-- video code is here -->
-    <section id="home">
-        <video onmousemove="playMyVideo()" id="myVideo" autoplay muted class="bg-video">
-            <source src="video/bg.mp4" type="video/mp4" />
-        </video>
-        <!-- <button onload="playMyVideo()">Click here to play this video</button> -->
-    </section>
-
-    <!-- About section started from here -->
-    <div id="about" class="aboutSec">
-        <div class="container">
-            <div class="row aboutCen">
-                <div class="col-md-12">
-                    <h2 class="contactH2Text">About</h2>
-                </div>
-                <div class="col-md-6 image">
-                    <img src="img/1.jpg" style="overflow: hidden; border-radius: 25%; border: 10px gold solid ;"
-                        class="img-fluid" alt="">
-                </div>
-                <div class="col-md-6 ">
-                    <h3>Our Founder: Qari Abdinasir Farah</h3> <br>
-                    <p>Qari Abdinasir Farah started his studies in the quranic sciences in Somalia and successfully
-                        memorized the Quran at a young age under his teachers Ustadh Abdirizak and Ustadh Cilmi. He then
-                        began to teach the Quran in Nairobi, Kenya before moving to the US where he would continue his
-                        passion of teaching the words of Allah. Qari Abdinasir has not only been teaching the Quran, but
-                        he has also continued his own education in the field of quranic sciences by reciting upon world
-                        renowned scholars such as Sheikh Waleed Al-Maneese, Sheikh Mahmoud Akawi, and Shiekh Ehaab
-                        Fikri. Qari Abdinasir has taught the Quran for well over a decade and has succeeded in producing
-                        over 20 huffadh. His students have gone on to secure multiple top positions in Quran
-                        competitions across the world such as Saudi Arabia, Egypt, Russia, Kuwait, and Dubai. Qari
-                        Abdinasir’s students are now studying the 10 Qiraat among other subjects while also training
-                        under him to become qualified Quran teachers themselves. Qari Abdinasir’s blessed journey with
-                        the Quran now continues with the opening of his own quranic center: Tibyan Center for Quranic
-                        Sciences.</p> <br>
-
-
-                </div>
-
-                <div class="col-md-12">
-                    <h3 style="text-align: center;">Brief History of the Tibyan and it's origins</h3> <br>
-                    <p>Tibyan Center first began as an aim to not only foster the first cohort of huffadh, but to create
-                        well rounded individuals with the passion and drive to continue bringing about cadres of
-                        huffadh, qurra, and imams. Fifteen years ago, the thought of having masses of people who can
-                        merely recite the Quran was an imagination, and the Muslim Community in Minnesota was in
-                        desperate need of Quranic centers with qualified teachers. It was then that Qari Abdinasir
-                        conceived the idea to bring about an unknown phenomenon to the West: students that memorize the
-                        Quran while holding on to their Islamic values. Not only was this dream achieved, but by the
-                        will of Allah (swt), dozens of his students have not only managed to memorize the Quran, but
-                        have gone on to compete in a plethora of Quran competitions across the world and have secured
-                        top positions. In addition to that, they have gone beyond memorizing the Quran, and are now
-                        studying for Ijaza certification in the 10 Qira’at, amongst other Islamic studies such as:
-                        Tafsir, Hadith, and Fiqh.Moving forward, Qari Abdinasir and his students are now expanding their
-                        reach to create an opportunity for not only dozens, but thousands of hopeful students that will
-                        continue to serve the Ummah for generations to come. The goal of Tibyan is to provide a
-                        nurturing environment for students who would like to pursue the field of Quranic sciences while
-                        instilling core Islamic teachings.</p> <br>
-
-                    <ul>
-                        <li> <a style="padding-left: 0px;" href="#"><i class="fab fa-facebook-square"></i> </a> </li>
-                        <li> <a href="#"> <i class="fab fa-instagram"></i> </a> </li>
-                        <li> <a href="#"><i class="fab fa-twitter-square"></i> </a> </li>
-                        <li> <a href="#"><i class="fab fa-linkedin"></i> </a> </li>
-                    </ul>
-                    <button class="contact-btn">Contact Us</button>
-                </div>
-            </div>
+    <h2>Registration Form</h2>
+    <form class="group-fliud">
+        <div class="d-flex p-2">
+            <label for="first name ">First Name</label>
+            <input type="text " placeholder="First Name " required>
         </div>
-    </div>
-
-    <!-- Gallary section started from here -->
-    <div class="galleryHero" id="gallery">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/3.jpg" height="602px" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="img/8.jpg" height="602px" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="img/9.jpg" height="602px" alt="Third slide">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+        <div class="group-fliud ">
+            <label for="last name ">Last Name</label>
+            <input type="text " placeholder="Last Name " required>
         </div>
-    </div>
-
-    <!-- Service section started from here -->
-    <div class="service" id="service">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Services</h2>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <span class="card-icon">
-                            <i class="fas fa-quran "></i>
-                        </span>
-                        <h2>Quran</h2> <br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, beatae excepturi? Minus iste
-                            enim hic sit optio maiores eveniet adipisci tenetur magni non! Nihil voluptate est
-                            temporibus illum quo rem.</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <span class="card-icon">
-                            <i class="fas fa-pen-nib"></i>
-                        </span>
-                        <h2> Qira’at</h2> <br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, beatae excepturi? Minus iste
-                            enim hic sit optio maiores eveniet adipisci tenetur magni non! Nihil voluptate est
-                            temporibus illum quo rem.</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <span class="card-icon">
-                            <i class="fas fa-book"></i>
-                        </span>
-                        <h2>Islamic studies</h2> <br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, beatae excepturi? Minus iste
-                            enim hic sit optio maiores eveniet adipisci tenetur magni non! Nihil voluptate est
-                            temporibus illum quo rem.</p>
-                    </div>
-                </div>
-            </div>
+        <div class="group-fluid ">
+            <label for="email ">Email</label>
+            <input type="text " placeholder="Email " required>
         </div>
-    </div>
-
-
-    <!-- Contact section started from here -->
-    <div id="contact" class="contactForm">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div style="padding: 20px;" class="form">
-                        <h2 class="contactH2Text">Contact Us</h2>
-                        <form method="POST" action="mail.php">
-                            <div class="row form1">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" name="name" class="form-control" id="exampleInputEmail1"
-                                            aria-describedby="emailHelp" placeholder="Your Name...">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" name="number" class="form-control" id="exampleInputEmail1"
-                                            aria-describedby="emailHelp" placeholder="Phone...">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <input type="email" class="form-control" name="email" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Enter Your Address...">
-                            </div>
-
-                            <div class="form-group">
-                                <form>
-                                    <div class="form-group">
-                                        <label for="form-group">First name</label>
-                                        <input type="text" placeholder="First name" name="fisrt name" id="first name"
-                                            required>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="form-group">Lat name</label>
-                                        <input type="text" placeholder="Last name" name="last name" id="last name"
-                                            required>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="form-group">Email</label>
-                                        <input type="text" placeholder="Email" name="email" id="email" required>
-                                    </div>
-                                </form>
-                                <textarea class="form-control" name="message" id="" cols="30" rows="10"
-                                    placeholder="Write your message"></textarea>
-                            </div>
-
-                            <button type="submit" name="submit" class="contact-btn">Submit</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
+        <label for="birthday ">Birthday:</label>
+        <input type="date " id="birthday " name="birthday ">
+        <div class="group-fluid ">
+            <label for="pname ">Parent Name</label>
+            <input type="text " placeholder="Parent Name ">
         </div>
-    </div>
-    <!-- footer section start from here -->
-    <div class="footer" style="margin-top: -7px;">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h4> &copy; All Right Reserved by <a href="index.html">Sufi Academy</a> </h4>
-                </div>
-            </div>
-        </div>
-    </div>
+        <form action="/action_page.php ">
+            <label for="phone ">Enter a phone number:</label><br><br>
+            <input type="tel " id="phone " name="phone " placeholder="123-45-678 " pattern="[0-9]{3}-[0-9]{2}-[0-9]{3} "><br><br>
+        </form>
 
-
-    <script>
-        var playVideo = document.getElementById("myVideo");
-        function playMyVideo() {
-            playVideo.play();
-
-        }
-    </script>
-    <!-- font awesome cdn -->
-    <script src="https://kit.fontawesome.com/6e4214a137.js" crossorigin="anonymous"></script>
-
-    <!-- Bootstraf cdn Jquary-->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
-
-</body>
-
-</html>
-51 mail.php
-@@ -0,0 +1,51 @@
-<?php
-
-$message = "";
-if(isset($_POST['submit'])){
-  //when you add or dlate filds add a vatiable like $email,$last_name etc.
-$name=$_POST['name'];
-$number=$_POST['number'];
-$email=$_POST['email'];
-$subject=$_POST['subject'];
-$message=$_POST['message'];
-
-
-$body .= "name: " . $name . "\n";
-$body .= "number: " . $number . "\n";
-$body .= "email: " . $email . "\n";
-$body .= "subject: " . $subject . "\n";
-$body .= "message: " . $message . "\n";
-//replace with your email
-mail("muhamadeyow@gmail.com","From:$Email",$body);
-       //add or remove veritable from here
- if(mail(mail,$body,$message)){
-
-        $message = "Hello, $name your Message hasbeen send succsessfully<p>";
-            ?>
-<script>
-    alert("Thank You! your message is send");
-</script>
-<?php
-
-        }else{
-            $message ="<p style='color:red;'>Hello, $name your Message sending faild Chack your Email</p>";
-          ?>
-<script>
-    alert("Something went wrong!Check your inputs.");
-</script>
-<?php
-        }
-
-    }
-    ?>
-
-
-<html lang="en">
-
-<head>
-    <meta http-equiv="Refresh" content="0; URL=index.html" />
-    <title>Thank you</title>
-</head>
-
+        </section>
+        <label for="quran ">Choose a course:</label>
+        <select id="quran ">
+  <optgroup label="Qur 'an Programs">
+    <option value="ijazah">Ijazah</option>
+    <option value="hifz">Hifz</option>
+    <option value="tilawah">Tilawah</option>
+    <option value="qaidah">Qaidah</option>
+  </optgroup>
+  <optgroup label="Tutor Programs">
+    <option value="math">Math</option>
+    <option value="writing">Writing</option>
+    <option value="reading">Reading</option>
+    <option value="arabic">Arabic</option>
+  </optgroup>
+</select>
+    </form>
+    <button>Submit</button>
 </body>
 
 </html>
