--- a/index.html
+++ b/index.html
@@ -7,56 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sufi Academy</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </head>
+<h1>Welcome</h1>
 
 <body>
-    <h2>Registration Form</h2>
-    <form class="group-fliud">
-        <div class="d-flex p-2">
-            <label for="first name ">First Name</label>
-            <input type="text " placeholder="First Name " required>
-        </div>
-        <div class="group-fliud ">
-            <label for="last name ">Last Name</label>
-            <input type="text " placeholder="Last Name " required>
-        </div>
-        <div class="group-fluid ">
-            <label for="email ">Email</label>
-            <input type="text " placeholder="Email " required>
-        </div>
-        <label for="birthday ">Birthday:</label>
-        <input type="date " id="birthday " name="birthday ">
-        <div class="group-fluid ">
-            <label for="pname ">Parent Name</label>
-            <input type="text " placeholder="Parent Name ">
-        </div>
-        <form action="/action_page.php ">
-            <label for="phone ">Enter a phone number:</label><br><br>
-            <input type="tel " id="phone " name="phone " placeholder="123-45-678 " pattern="[0-9]{3}-[0-9]{2}-[0-9]{3} "><br><br>
-        </form>
+    <script src="main.js"></script>
 
-        </section>
-        <label for="quran ">Choose a course:</label>
-        <select id="quran ">
-  <optgroup label="Qur 'an Programs">
-    <option value="ijazah">Ijazah</option>
-    <option value="hifz">Hifz</option>
-    <option value="tilawah">Tilawah</option>
-    <option value="qaidah">Qaidah</option>
-  </optgroup>
-  <optgroup label="Tutor Programs">
-    <option value="math">Math</option>
-    <option value="writing">Writing</option>
-    <option value="reading">Reading</option>
-    <option value="arabic">Arabic</option>
-  </optgroup>
-</select>
-    </form>
-    <button>Submit</button>
 </body>
 
 </html>
