--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sufi Academy</title>
+    <title>fieldset elements</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<h1>Welcome</h1>
 
 <body>
-    <script src="main.js"></script>
+    <h1>The fieldset element</h1>
+
+    <form>
+        <fieldset form="user_regn" name="user_details">
+            <label for="fname">First name:</label>
+            <input type="text" id="fname" name="fname"><br><br>
+            <label for="lname">Last name:</label>
+            <input type="text" id="lname" name="lname"><br><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email"><br><br>
+            <label for="birthday">Birthday:</label>
+            <input type="date" id="birthday" name="birthday"><br><br>
+        </fieldset>
+        <input type="submit" value="Submit">
+    </form>
+
+    <script src="script.js"></script>
 
 </body>
 
