--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <form>
         <fieldset form="user_regn" name="user_details">
+            <legend>Presonal Details</legend>
             <label for="fname">First name:</label>
             <input type="text" id="fname" name="fname"><br><br>
             <label for="lname">Last name:</label>
